[package]
name = "iroh-loro"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.80"
async-broadcast = "0.7.1"
async-channel = "2.3.1"
clap = { version = "4.5.1", features = ["derive"] }
dirs-next = "2.0.0"
iroh = { version = "0.35", features = ["discovery-local-network"] }
iroh-node-util = { version = "0.35", default-features = false }
loro = "1.5.10"
n0-future = "0.1.2"
notify = "7.0.0"
postcard = "1.0.8"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
bytes = "1.9.0"
