[package]
name = "iroh-loro"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-channel = "2.5.0"
clap = { version = "4.5.47", features = ["derive"] }
dirs-next = "2.0.0"
hex = "0.4"
iroh = { version = "0.91.2", features = ["discovery-local-network"] }
loro = "1.6.1"
n0-future = "0.2.0"
notify = "8.2.0"
rand_core = "0.9.3"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
bytes = "1.9.0"
