[package]
name = "iroh-loro"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-channel = "2.5.0"
clap = { version = "4.5", features = ["derive"] }
dirs-next = "2.0"
hex = "0.4"
iroh = "0.91"
loro = "1.6"
n0-future = "0.2"
notify = "8.0"
rand_core = "0.9"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
bytes = "1.9.0"
